# solar-emergence

./: .env.discovery  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  EMERGENT_INTELLIGENCE_CHARTER.md  PROJECT_STATUS.md  README.md  cleanup_knowledge_corpus.sh  download_papers.sh  knowledge_acquisition.sh  package.json  pyproject.toml  requirements-ml.txt  requirements.txt  test-what-we-have.js
.bmad-core/: README-INFRASTRUCTURE.md  core-config.yaml  install-manifest.yaml  swarm-config.yml
.bmad-core/agents/: architect.md  architecture-swarm-agent.md  data-infrastructure-swarm.md  enhanced-bmad-master.md  meta-swarm-orchestrator.md  pattern-discovery-agent.md  spec-kit-integration.md  storage-architect-specialist.md  video-processing-specialist.md
.bmad-core/context/: knowledge_context.json
.bmad-core/memory/: current_state.json  knowledge_index.json  swarm-constitution.md
.bmad-core/meta-intelligence/: README.md  god-view-orchestrator.js  strategic-command-interface.js
.bmad-core/scripts/: deploy-infrastructure-swarms.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: bmad_knowledge_bridge.py  constraint_enforcer.py  knowledge_harvester.py  knowledge_organizer.py
bridge/: README.md  emergent_intelligence.py  ml_connector.py  python_go_bridge.py
docs/: EMERGENCE_ARCHITECTURE.md  KNOWLEDGE_CORPUS_GUIDE.md  KNOWLEDGE_INTELLIGENCE_STRATEGY.md  LOCAL_IMPLEMENTATION_GUIDE.md  PROJECT_CHARTER.md  PROJECT_PLAN.md  TECHNICAL_SPECIFICATION.md  bmad-agent-handoff-summary.md  brainstorming-session-results.md  brief.md  prd-preparation-guide.md
extraction/: unconstrained_capture.py
knowledge-corpus/: README.md
memory/: spec-kit-bmad-integration.md
scripts/: auto-sync-knowledge.sh  enhance-knowledge-intelligence.sh  feed_knowledge.py  launch_intelligence.sh  monitor_emergence.py  start_ehsmas_coordinator.sh
specs/: multimodal-discovery.spec.yml  solar-emergence-architecture.spec.yml
src/: __init__.py
tests/: test_smoke.py
(+30 files in other folders)
